fix: исправить тесты